core/tests/integration/fail/arrays/slice_empty_array.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::Other'
%array_slice% 1 1 []
